snapshot-tests/tests/snapshots/parser__bad_keys__newline3.snap
---
source: snapshot-tests/tests/parser.rs
expression: error
---
error[unterminated-string]: 
  ┌─ newline3:1:1
  │
1 │ "something
  │ ^ expected `"`
